# GramMetaRL

./: .gitignore  PRD_VERL_GRAMMAR_AGENT.md  README.md  main.py  prompts  pyproject.toml
agent_env/: __init__.py
configs/algo/: drgrpo.yaml
configs/model/: qwen3_8b.yaml
configs/project/: paths.yaml
configs/tool/: grammar_first_tools.yaml
configs/train/: fsdp2_vllm.yaml
eval/: README.md
grammetarl/: __init__.py  example_agent.py  index.py  llm_extract.py  migration.py  ocr.py  pdf_ingest.py  pipeline.py  prompt_manager.py  schema.py  validator.py  workspace.py
grammetarl/agent_env/: __init__.py  action_schema.py  env.py  state.py
grammetarl/configs/algo/: grpo.yaml
grammetarl/configs/exp/: debug_small.yaml  full_train.yaml
grammetarl/configs/reward/: grammar_reward.yaml
grammetarl/prompts/: system_prompt.txt
grammetarl/prompts/jinja/: example_agent_system.j2  example_agent_user.j2  mbg_system.j2  (+7 more)
grammetarl/rewards/: __init__.py  aggregate.py  grammar_reward.py  mt_reward.py  tool_reward.py
grammetarl/tools/: __init__.py  dictionary_lookup.py  grammar_apply.py  grammar_search.py  grammar_verify.py
grammetarl/training/: __init__.py  build_dataset.py  run_eval.py  run_grpo.py  run_sft.py
notebook/: ds_ocr_testing.ipynb  mbg_5page_qwen_test.ipynb  mbg_experiment_report.ipynb  mbg_fullbook_qwen_test.ipynb  mbg_fullbook_qwen_test_agent_example.ipynb
rewards/: __init__.py
scripts/: convert_lod_xml_to_jsonl.py  extract_pdf_page_ocr.py  migrate_workspace_layout.py
tests/: test_tools_and_env.py
tools/: __init__.py
training/: __init__.py
